# Layout-Detection

./: CHANGELOG.md  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/layoutdetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/layoutdetection/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/layoutdetection/: ExampleUnitTest.java
fastlane/: Appfile  Fastfile
gradle/wrapper/: gradle-wrapper.properties
layoutdetection/: build.gradle  publishing.gradle
layoutdetection/src/androidTest/java/com/leiainc/androidsdk/layoutdetection/: ExampleInstrumentedTest.java
layoutdetection/src/main/: AndroidManifest.xml
layoutdetection/src/main/assets/: svm
layoutdetection/src/main/cpp/: CMakeLists.txt  native-lib.cpp
layoutdetection/src/main/cpp/libs/: CMakeLists.txt
layoutdetection/src/main/cpp/libs/feature/: CMakeLists.txt  feature.cpp
layoutdetection/src/main/cpp/libs/feature/include/: feature.h
layoutdetection/src/main/cpp/libs/svm/: CMakeLists.txt  svm_util.cpp
layoutdetection/src/main/cpp/libs/svm/include/: svm_util.h
layoutdetection/src/main/java/com/leiainc/androidsdk/layoutdetection/: ImageLayoutDetector.java  SupportVectorMachineLayoutDetector.java
layoutdetection/src/test/java/com/leiainc/androidsdk/layoutdetection/: ExampleUnitTest.java
training/: CMakeCache.txt  CMakeLists.txt  README.md  confusion_matrix.py  detection.cpp  main.cpp
training/dataset/: .write_dataset.py.swp  write_dataset.py
training/dataset/holopix50k/: render_sbs_images.py  run_multiviewlib.py  write_dataset.py
training/dataset/scrap/: download.py  youtube_link_prefix.py
training/dataset/video/: video2images.py  write_dataset.py
training/dataset/video360/: data_collection.py  write_dataset.py
